--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>React + TypeScript + Replit</title>
   </head>
   <body>
+    <span>Eu estive aqui!</span>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
