Alterando o index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <span>Eu estive aqui!</span>
+    <span>EU ESTIVE AQUI E SOU MUITO MAIS IMPORTANTE!!!</span>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
